<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:text="@string/units_title"
            android:textColor="@color/colorCategoryTitle"
            android:textSize="16sp" />


        <android.support.constraint.ConstraintLayout
            android:id="@+id/temp_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:weightSum="100">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/temperature_title"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/rg_temperature_type"
                android:layout_width="164dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorTransparentWindowBackground"
                android:orientation="horizontal"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/rb_celsius"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/left_toggle_background"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/celsius"
                    android:textColor="@color/colorUncheckedText"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rb_kelvin"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/right_toggle_background"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/kelvin"
                    android:textColor="@color/colorUncheckedText"
                    android:textSize="18sp" />
            </RadioGroup>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/pressure_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/pressure_title"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/rg_pressure_type"
                android:layout_width="164dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorTransparentWindowBackground"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/rb_pressure_mm_hg"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/left_toggle_background"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/pressure_mm_hg_toggle_name"
                    android:textColor="@color/colorUncheckedText"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rb_pressure_hectopascal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/right_toggle_background"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/pressure_hectopascal_toggle_name"
                    android:textColor="@color/colorUncheckedText"
                    android:textSize="18sp" />
            </RadioGroup>
        </android.support.constraint.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/white" />

        <TextView
            android:id="@+id/tv_about_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/about_application"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white" />
    </LinearLayout>
</layout>